<resources>
    <string name="app_name">Spacia</string>

    <string name="no_internet">No hay conexión a internet</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password_body">A continuación, ingresa tu email para recibir las instrucciones de restablecimiento de contraseña.</string>
    <string name="forgot_passwrod_btn">Recuperar contraseña</string>
    <string name="forgot_ayuda">¿Necesitas ayuda?</string>
    <string name="forgot_numero">(+51) 989281294</string>
    <string name="user_wrong">Email y/o contraseña son incorrectos</string>
    <string name="error_connect">Hubo un error en la conexión</string>
    <string name="modal_login">Inciando Sesión</string>
    <string name="user_noexist">Este usuario no se encuentra registrado en Spacia</string>
    <string name="email_wrong">Este email no se encuentra registrado en Spacia</string>
    <string name="loading_process">Cargando</string>
    <string name="message_customize">Mensaje Personalizado</string>
    <string name="btn_accepted">Aceptar</string>
    <string name="modal_logout">Cerrar sesión</string>
    <string name="no_events">Aún no se le ha asignado ningún evento</string>
</resources>
