<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/rl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/colorAccent">
            <ImageView
                android:layout_width="40dp"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:id="@+id/iv_back"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_back"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:src="@drawable/logo_h"/>
        </RelativeLayout>
        <View
            android:layout_height="1dp"
            android:id="@+id/separator"
            android:layout_below="@+id/rl_toolbar"
            style="@style/Separator">
        </View>

        <TextView
            android:id="@+id/txt_internet"
            android:layout_below="@id/separator"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:text="@string/no_internet"
            android:background="@color/material_red600"
            android:textColor="@color/material_white"
            android:gravity="center"
            android:textSize="@dimen/text_size_14"
            android:visibility="gone"
            android:fontFamily="@font/ralewayregular"
            />

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_below="@id/txt_internet"
            android:background="@color/material_white"
            android:fillViewport="true"
            android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:focusableInTouchMode="true"
            android:fitsSystemWindows="true"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_s"
                    android:id="@+id/iv_forgot_logo"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:gravity="center"
                    android:fontFamily="@font/ralewayregular"
                    android:textColor="@color/material_grey800"
                    android:text="@string/forgot_password_body"/>
                <EditText
                    android:id="@+id/et_email"
                    android:layout_marginTop="16dp"
                    android:inputType="textEmailAddress"
                    android:drawableTint="@color/material_grey300"
                    android:drawableLeft="@drawable/email"
                    style="@style/ViewBoxText"
                    android:hint="Email"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:maxLength="60"
                    android:padding="14dp" />

                <Button
                    android:id="@+id/btn_recuperar_pass"
                    android:layout_marginTop="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="90dp"
                    android:background="@drawable/btn_radiusform"
                    android:textColor="@color/material_white"
                    android:textSize="@dimen/text_size_16"
                    android:textAllCaps="false"
                    style="?android:attr/borderlessButtonStyle"
                    android:fontFamily="@font/ralewayregular"
                    android:text="@string/forgot_passwrod_btn"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ln_whatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingBottom="16dp"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/number"
                    android:fontFamily="@font/ralewayregular"
                    android:textColor="@color/material_grey800"
                    android:text="@string/forgot_ayuda"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/ralewaybold"
                    android:textColor="@color/colorAccent"
                    android:text="@string/forgot_numero"/>

            </LinearLayout>
        </RelativeLayout>
        </ScrollView>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>

